--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,28 @@ header div img {
 
 h1 {
     text-align: center;
+    width: 50%;
+    font-size: x-large;
+
 }
+
+h1 {
+    animation-duration: 2s;
+    animation-name: aparecer;
+    animation-iteration-count: infinite;
+}
+
+
+@keyframes aparecer {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
 
 .imagen_principal {
     display: flex;
