--- a/sass/general/_header.scss
+++ b/sass/general/_header.scss
@@ -8,4 +8,14 @@ header div {
     }
     
 }
+.logo{
+    width: 5px;
+}
+
+.carousel{
+    justify-content: center;
+    display: flex;
+    width: 55%;
+    margin-left: 20%;
+}
 
