--- a/sass/general/_main.scss
+++ b/sass/general/_main.scss
@@ -9,5 +9,8 @@
 }
 
 .historiadisney {
-    margin-left: 5px;
+    margin-left: 50px;
+    justify-content: center;
+    display: flex;
+    width: 50%;
 }
